Fix: New wallet footer buttons alignment
* Align right the `continue` button
* Align left the `Show me my 24 words again` button

--- a/webapp/src/scss/_layout.scss
+++ b/webapp/src/scss/_layout.scss
@@ -131,6 +131,11 @@ body {
       border-top: $border-width solid $border-color;
       border-bottom-left-radius: $border-radius * 1.5;
       width: 100%;
+
+      &-back {
+        padding-left: 0;
+        padding-right: 0;
+      }
     }
 
     .footer-sheet {
